[project]
name = "08-12-ml-rnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py==2.3.1",
    "asttokens==3.0.1",
    "astunparse==1.6.3",
    "cachetools==6.2.2",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "colorama==0.4.6",
    "comm==0.2.3",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "exceptiongroup==1.3.1",
    "executing==2.2.1",
    "flatbuffers==25.9.23",
    "gast==0.7.0",
    "google-auth==2.43.0",
    "google-auth-oauthlib==1.2.2",
    "google-pasta==0.2.0",
    "grpcio==1.76.0",
    "h5py==3.15.1",
    "idna==3.11",
    "ipykernel==7.1.0",
    "ipython==8.37.0",
    "jedi==0.19.2",
    "joblib==1.5.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.9.1",
    "keras==2.15.0",
    "libclang==18.1.1",
    "markdown==3.10",
    "markupsafe==3.0.3",
    "matplotlib-inline==0.2.1",
    "ml-dtypes==0.2.0",
    "nest-asyncio==1.6.0",
    "numpy==1.26.4",
    "oauthlib==3.3.1",
    "opt-einsum==3.4.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "platformdirs==4.5.1",
    "prompt-toolkit==3.0.52",
    "protobuf==4.25.8",
    "psutil==7.1.3",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyzmq==27.1.0",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "rsa==4.9.1",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "setuptools==80.9.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "tensorboard==2.15.2",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.15.0",
    "tensorflow-estimator==2.15.0",
    "tensorflow-intel==2.15.0",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "tensorflow-keras==0.1",
    "termcolor==3.2.0",
    "threadpoolctl==3.6.0",
    "tornado==6.5.2",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.6.1",
    "wcwidth==0.2.14",
    "werkzeug==3.1.4",
    "wheel==0.45.1",
    "wrapt==1.14.2",
]
